--- a/ms/references.bib
+++ b/ms/references.bib
@@ -903,6 +903,20 @@
   pages = {13703--13708},
 }
 
+
+@article{Rogers-2017,
+  title = {A Roadmap for Improving the Representation of Photosynthesis in {{Earth}} System Models},
+  author = {Rogers, Alistair and Medlyn, Belinda E. and Dukes, Jeffrey S. and Bonan, Gordon and Caemmerer, Susanne and Dietze, Michael C. and Kattge, Jens and Leakey, Andrew DB and Mercado, Lina M. and Niinemets, {\"U}lo},
+  year = {2017},
+  volume = {213},
+  pages = {22--42},
+  journal = {New Phytologist},
+  number = {1}
+}
+
+
+
+
 @article{Sack-2004,
   title = {Responses of Temperate Woody Seedlings to Shade and Drought: Do Trade-Offs Limit Potential Niche Differentiation?},
   volume = {107},
